# MLOPS_V2

./: .gitignore  prueba_geo.txt.dvc
MLOPS_V2/: .gitignore  Makefile  README.md  pyproject.toml
MLOPS_V2/MLOPs_V2/: __init__.py  dataset.py  features.py  plots.py
MLOPS_V2/MLOPs_V2/modeling/: predict.py  train.py
MLOPS_V2/docs/: mkdocs.yml
MLOPS_V2/docs/docs/: index.md
