[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "MLOPs_V2"
version = "0.0.1"
description = "Proyecto final OAA"
authors = [
  { name = "Equipo47" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["MLOPs_V2"]
include = ["pyproject.toml", "MLOPs_V2/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["MLOPs_V2"]
force-sort-within-sections = true

